proj1/testing/error/notARotor.inp
* B Beta I III VI (AAAA)
HELLO WORLD